# mot-toolkit

./: .gitignore  .ruff.toml  .tokeignore  README.md  install-dev.py  install.py  main.py  pyproject.toml  r-dev-requirements.txt  requirements-dev.txt  requirements.txt  start_gui.py
Resources/: compile_svg.py
Resources/PySide6/: qt_compile_resource.py  resources.qrc
Resources/PySide6/Logo/: Logo.ai  Logo.psd  tubiaozhizuomoban.eps
Resources/PySide6/Logo/Icon/macOS/: Logo.icns
Scripts/: CheckCode.py  GitConfig.py  Ruff.py  Tokei.py  build_nuitka_macos.sh  install_torch_amd_gpu.sh  nuitka.txt
Test/: .gitignore  test_match.py
Test/Exp/: exp_match.py
dev_test/: py_game.py  scoll_area.py  sobel.py
gui/: main_window.py
mot_toolkit/: main_gui.py  start_gui.py
mot_toolkit/config/: hardware.py
mot_toolkit/datatype/: rect_data_annotation.py  xanylabeling.py  xanylabeling_json.py
mot_toolkit/datatype/common/: annotation_file.py  dataset_directory.py  object_annotation.py  rect_data_annotation.py
mot_toolkit/datatype/directory/: dir_file.py
mot_toolkit/gui/common/: global_settings.py  system_wide_menu.py
mot_toolkit/gui/resources/: .gitignore
mot_toolkit/gui/view/: main_window.py
mot_toolkit/gui/view/components/: annotation_widget_rect.py  base_group_widget.py  base_image_view.py  base_image_view_graphics.py  base_interface_window.py  base_list_widget_with_menu.py  base_q_main_window.py  base_q_widget.py  base_q_widget_with_layout.py  list_with_title_widget.py  resizable_rect.py  scroll_image_view.py  select_directory_path.py
mot_toolkit/gui/view/example/: touchpad.py
mot_toolkit/gui/view/frame/: interface_frame.py
mot_toolkit/gui/view/interface/: base_interface.py
mot_toolkit/gui/view/interface/frame/: interface_frame.py
mot_toolkit/gui/view/interface/multi_level/: interface_multi_level.py
mot_toolkit/gui/view/interface/preview/: interface_preview.py
mot_toolkit/gui/view/interface/settings/: global_settings.py  interface_settings.py
mot_toolkit/gui/view/interface/smooth/: interface_smooth.py
mot_toolkit/gui/view/interface/statistics/: interface_statistics.py
mot_toolkit/gui/view/menu/: system_menu.py
mot_toolkit/gui/view/statistics/: interface_statistics.py
mot_toolkit/parser/: json_parser.py  xanylabeling.py
mot_toolkit/scripts/: 20240628.xlsx  part2.xlsx  part4.xlsx  stat_count.py
mot_toolkit/utils/: file.py  system_info.py
src/: main.py  setup.py
src/mot_toolkit/: main_gui.py
src/mot_toolkit/config/: program_path.py
src/mot_toolkit/datatype/: xanylabeling.py
src/mot_toolkit/datatype/common/: annotation_file.py  dataset_directory.py  object_annotation.py  rect_data_annotation.py
src/mot_toolkit/datatype/directory/: dir_file.py
src/mot_toolkit/gui/common/: global_settings.py  global_varible.py  system_wide_menu.py
src/mot_toolkit/gui/utils/: q_color.py  screen.py
src/mot_toolkit/gui/view/: main_window.py
src/mot_toolkit/gui/view/components/: annotation_widget_rect.py  base_image_view_label.py  base_interface_window.py  link_label.py  (+3 more)
src/mot_toolkit/parser/: file_encoding.py  json_parser.py
src/mot_toolkit/scripts/: export_frame_with_box.py  export_to_dancetrack.py  export_to_yolo_detect.py  stat_count.py
src/mot_toolkit/utils/: file.py  logs.py
src/mot_toolkit/utils/image/: qt_opencv.py
src/mot_toolkit/utils/py/: pip_utils.py
src/mot_toolkit/utils/qt/: color.py  debug.py  q_application.py
src/mot_toolkit/utils/statistics/: stats_file.py
src/mot_toolkit/utils/system/: display.py  dpi_ratio.py  file_explorer.py  system.py
(+76 files in other folders)
