[project]
name = "mot-toolkit"
version = "0.1.0"
description = "MOT Toolkit"
authors = [
    { name = "Haomin Kong", email = "a645162@qq.com" }
]
dependencies = [
    "loguru",
    "pyside6",
    "opencv-python",
    "numpy<2",
    "chardet",
]
readme = "README.md"
requires-python = ">= 3.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hatchling",
    "ruff",
    "cairosvg",
    "pytest",
    "pyinstaller",
    "nuitka>=2.4.8",
    "pillow>=10.4.0",
]

[tool.uv]
dev-dependencies = [
    "hatchling",
    "ruff",
    "cairosvg",
    "pytest",
    "pyinstaller",
    "nuitka>=2.4.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mot_toolkit"]
